# api-core

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
api/: __init__.py  config.py
api/models/db/: __init__.py  base.py  cycle.py  key_result.py  key_result_check_in.py  key_result_check_mark.py  key_result_comment.py  objective.py  team.py  user.py
api/models/db/associations/: association_team_user.py
api/models/db/types/: cycle_cadence_enum.py  key_result_check_mark_state_enum.py  key_result_format_enum.py  key_result_mode_enum.py  key_result_type_enum.py  objective_mode_enum.py
api/models/db/views/: team_company.py
api/services/auth/: __init__.py  routes.py
api/services/llm/: __init__.py  routes.py
api/services/llm/logic/: index.py  summary.py  team_ranking.py
api/services/llm/templates/: index.html  team-ranking-content.html  team-ranking.html
api/utils/: auth.py  openai.py
tests/: __init__.py  config.py  database.py
tests/functional/: test_llm.py
tests/mocks/: mock_openai.py
tests/unit/: test_llm.py
